Mon Nov 15 12:45:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.cpp:
        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Fixed memory leak and shutdown crashes

Mon Nov 15 12:08:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/PublisherListener.cpp:
        * connectors/dds4ccm/impl/SubscriberListener.cpp:
        * connectors/dds4ccm/impl/Utils.h:
          Print QoSPolicyId_t as readable string

Mon Nov 15 11:36:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h:
          Removed ndds include

        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Added missing virtual destructor

Mon Nov 15 11:33:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          Listening was based on whether the user had a PortStatusListener
          configured (and implemented). Now listening is based on the internal
          listener.

Mon Nov 15 11:11:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/PublisherListener.h:
        * connectors/dds4ccm/impl/PublisherListener.cpp:
        * connectors/dds4ccm/impl/dds4ccm_impl.mpc:
          PublisherListener is now a C++ class instead of a template

        * connectors/dds4ccm/impl/PublisherListener_T.h: